@@ -7,16 +7,21 @@ import org.example.model.User;
 import org.example.model.dto.PageDto;
 import org.example.model.dto.user.*;
 import org.example.repository.UserRepository;
+import org.example.repository.specification.SpecificationManager;
 import org.example.service.UserService;
+import org.example.utils.PageableBuilder;
 import org.example.utils.mapper.UserMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,10 +30,14 @@ public class UserServiceImpl implements UserService {
     private final PasswordEncoder passwordEncoder;
     private final UserRepository userRepository;
     private final UserMapper userMapper;
+    private final PageableBuilder pageableBuilder;
+    private final SpecificationManager<User> specificationManager;
+
+    private static final String SPLIT_TO_ARRAY = ",";
 
     @Override
     @Transactional(readOnly = true)
-    public UserReadDto getById(int id) {
+    public UserReadDto getById(Integer id) {
         return userRepository.findById(id)
                 .map(userMapper::toReadDto)
                 .orElseThrow(() -> new EntityNotFoundException("User with ID: " + id + " not found"));
@@ -52,11 +61,20 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional(readOnly = true)
-    public PageDto<UserReadDto> getAll(Pageable pageable) {
-        Page<User> userPage = userRepository.findAll(pageable);
-        List<UserReadDto> userReadDtos = userPage.stream()
+    public PageDto<UserReadDto> getAll(Map<String, String> params) {
+        Pageable pageRequest = pageableBuilder.buildFromFilters(params);
+        Specification<User> specification = null;
+
+        for (Map.Entry<String, String> entry : params.entrySet()) {
+            Specification<User> sp = specificationManager.get(entry.getKey(), entry.getValue().split(SPLIT_TO_ARRAY));
+            specification = specification == null ? Specification.where(sp) : specification.and(sp);
+        }
+
+        Page<User> userPage = userRepository.findAll(specification, pageRequest);
+
+        List<UserReadDto> userReadDtos = userPage.getContent().stream()
                 .map(userMapper::toReadDto)
-                .toList();
+                .collect(Collectors.toList());
 
         return PageDto.<UserReadDto>builder()
                 .content(userReadDtos)
@@ -85,7 +103,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public UserReadDto update(int id, UserUpdateDto userUpdateDto) {
+    public UserReadDto update(Integer id, UserUpdateDto userUpdateDto) {
         User user = getEntityById(id);
 
         String newUsername = userUpdateDto.getUsername();
@@ -109,7 +127,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public void updatePassword(int id, UserPasswordChangeDto passwordChangeDto) {
+    public void updatePassword(Integer id, UserPasswordChangeDto passwordChangeDto) {
         User user = getEntityById(id);
 
         if (!passwordEncoder.matches(passwordChangeDto.getCurrentPassword(), user.getPassword())) {
@@ -132,7 +150,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public void deleteById(int id) {
+    public void deleteById(Integer id) {
         if (!userRepository.existsById(id)) {
             throw new EntityNotFoundException("User with ID " + id + " not found");
         }
@@ -141,7 +159,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional(readOnly = true)
-    public User getEntityById(int id) {
+    public User getEntityById(Integer id) {
         return userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User with ID: " + id + " not found"));
     }
